# context-engineering-harness

./: .gitignore  CHANGELOG.md  CHARTER.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MEMORY.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  tests.yml
audit/: 00-pov-recap-2026-06-08.md  01-swebok-validation-2026-06-08.md  02-swebok-100pct-validation-2026-06-08.md  03-adversarial-analysis-2026-06-08.md  04-adversarial-passe2-post-qw-2026-06-08.md  05-final-zero-crit-2026-06-09.md  06-adversarial-passe3-residual-2026-06-09.md  07-zero-residual-2026-06-09.md  08-LESSONS-LEARNED-FOR-SWEBOK-2026-06-09.md  09-integral-analysis-council-2026-06-10.md  10-council-v110-corpus-2026-06-11.md  council-bridge-results.jsonl  run_council_gates.sh
audit/fresh-eyes-v102/: .audit_state.json  00-spec.md  01-checklist.md  02-plan.md  03-tasks.md  04-analyze.md  05-findings.md  06-prioritized-actions.md  07-report-final.md  inventory.md
corpus/anti-patterns/: INDEX.md
corpus/findings/: 00-synthesis.md
corpus/sources/: INDEX.md
design/: 00-architecture.md
docs/: ADVERSARIAL.md  API.md  ARCHITECTURE.md  FAQ.md  HOOKS.md  INSTALLATION.md  PRODUCTION.md  QUICKSTART.md
prototype/: .gitignore  README.md
prototype/lib/: __init__.py  ace_compact.py  adversarial_corpus.py  archive_anonymizer.py  ci_cd_pinning.py  cli.py  code_api.py  contract_validator.py  dsl.py  encrypted_state.py  event_driven_memory.py  hooks.py  (+22 more)
strategy/: 00-strategy-2026-06-08.md
(+40 files in other folders)
